// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions should render with 1`] = `
<div>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
  </div>
  <div
    class="border border-solid border-theme-neutral-300 dark:border-theme-neutral-800 p-6 rounded-lg text-theme-secondary-text -mt-5"
  >
    This will display the history of your transactions. But you don't have more than one transaction at the moment.
  </div>
</div>
`;

exports[`Transactions should render with custom title 1`] = `
<div>
  <div
    class="mb-8 text-4xl font-bold"
  >
    Transaction history
  </div>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
  </div>
  <div
    class="border border-solid border-theme-neutral-300 dark:border-theme-neutral-800 p-6 rounded-lg text-theme-secondary-text -mt-5"
  >
    This will display the history of your transactions. But you don't have more than one transaction at the moment.
  </div>
</div>
`;

exports[`Transactions should render with with transactions 1`] = `
<div>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top invisible"
              >
                <div>
                  Type
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Info
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end"
              >
                <div>
                  Amount
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH"
              >
                <a
                  class="sc-AxmLO fFHGCy inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                  data-testid="TransactionRow__ID"
                  rel="noopener noreferrer"
                  to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                >
                  <div
                    class="sc-AxirZ iQaTP flex-shrink-0 "
                    data-testid="Link__external"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </a>
              </div>
            </td>
            <td
              class="w-48"
            >
              <div
                class="sc-AxhCb kdNpYF text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td
              class="w-32"
            >
              <div
                class="sc-AxhCb kdNpYF"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-AxheI etPkdG border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                        title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <div
                  class="inline-block truncate align-middle"
                >
                  <span
                    class="sc-Axmtr hBVTto text-theme-text font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    ASuusX … GQ3kqT
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ bZmEIe"
                      data-testid="TransactionRowInfo__vendorField"
                      height="16"
                      width="17"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex p-1 align-middle"
                  data-testid="TransactionRowConfirmation"
                >
                  <div
                    class="sc-AxirZ hmuEJr text-theme-warning"
                    data-testid="TransactionRowConfirmation__pending"
                    height="22"
                    width="22"
                  >
                    <svg>
                      status-pending.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-end"
              >
                <div
                  class="sc-AxgMl eXChH"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    121 
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf justify-end"
              />
            </td>
          </tr>
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH"
              >
                <a
                  class="sc-AxmLO fFHGCy inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                  data-testid="TransactionRow__ID"
                  rel="noopener noreferrer"
                  to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                >
                  <div
                    class="sc-AxirZ iQaTP flex-shrink-0 "
                    data-testid="Link__external"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </a>
              </div>
            </td>
            <td
              class="w-48"
            >
              <div
                class="sc-AxhCb kdNpYF text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td
              class="w-32"
            >
              <div
                class="sc-AxhCb kdNpYF"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-AxheI etPkdG border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                        title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <div
                  class="inline-block truncate align-middle"
                >
                  <span
                    class="sc-Axmtr hBVTto text-theme-text font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    ASuusX … GQ3kqT
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ bZmEIe"
                      data-testid="TransactionRowInfo__vendorField"
                      height="16"
                      width="17"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex p-1 align-middle"
                  data-testid="TransactionRowConfirmation"
                >
                  <div
                    class="sc-AxirZ hmuEJr text-theme-warning"
                    data-testid="TransactionRowConfirmation__pending"
                    height="22"
                    width="22"
                  >
                    <svg>
                      status-pending.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-end"
              >
                <div
                  class="sc-AxgMl eXChH"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    121 
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf justify-end"
              />
            </td>
          </tr>
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH"
              >
                <a
                  class="sc-AxmLO fFHGCy inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                  data-testid="TransactionRow__ID"
                  rel="noopener noreferrer"
                  to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                >
                  <div
                    class="sc-AxirZ iQaTP flex-shrink-0 "
                    data-testid="Link__external"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </a>
              </div>
            </td>
            <td
              class="w-48"
            >
              <div
                class="sc-AxhCb kdNpYF text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td
              class="w-32"
            >
              <div
                class="sc-AxhCb kdNpYF"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-AxheI etPkdG border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-AxheI etPkdG border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        voted.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span
                  class="font-semibold text-theme-text"
                  data-testid="TransactionRowRecipientLabel"
                >
                  Vote
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ bZmEIe"
                      data-testid="TransactionRowInfo__vendorField"
                      height="16"
                      width="17"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex p-1 align-middle"
                  data-testid="TransactionRowConfirmation"
                >
                  <div
                    class="sc-AxirZ hmuEJr text-theme-warning"
                    data-testid="TransactionRowConfirmation__pending"
                    height="22"
                    width="22"
                  >
                    <svg>
                      status-pending.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-end"
              >
                <div
                  class="sc-AxgMl eXChH"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    121 
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf justify-end"
              />
            </td>
          </tr>
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH"
              >
                <a
                  class="sc-AxmLO fFHGCy inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                  data-testid="TransactionRow__ID"
                  rel="noopener noreferrer"
                  to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                >
                  <div
                    class="sc-AxirZ iQaTP flex-shrink-0 "
                    data-testid="Link__external"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </a>
              </div>
            </td>
            <td
              class="w-48"
            >
              <div
                class="sc-AxhCb kdNpYF text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td
              class="w-32"
            >
              <div
                class="sc-AxhCb kdNpYF"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-AxheI etPkdG border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-AxheI etPkdG border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        delegate.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span
                  class="font-semibold text-theme-text"
                  data-testid="TransactionRowRecipientLabel"
                >
                  Delegate Registration
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ bZmEIe"
                      data-testid="TransactionRowInfo__vendorField"
                      height="16"
                      width="17"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex p-1 align-middle"
                  data-testid="TransactionRowConfirmation"
                >
                  <div
                    class="sc-AxirZ hmuEJr text-theme-warning"
                    data-testid="TransactionRowConfirmation__pending"
                    height="22"
                    width="22"
                  >
                    <svg>
                      status-pending.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-end"
              >
                <div
                  class="sc-AxgMl eXChH"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    121 
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf justify-end"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <button
    class="sc-AxjAm joLCoM w-full mt-10 mb-5"
    color="primary"
    data-testid="transactions__fetch-more-button"
    type="button"
  >
    View More
  </button>
</div>
`;
